projeto/etapa2/tests/invalid/01_missing_semi.lc
/* Falta ; no final do comando */
fun void main() {
    let x := 10
    print x ;
}
